--- a/views/pages/homepage.handlebars
+++ b/views/pages/homepage.handlebars
@@ -3,7 +3,7 @@
 	{{#each dogs}}
 		<article class="dog">
 			<h2><a href="/dogs/{{_id}}">{{name}}</a></h2>
-			<img src="{{pictures[0]}}" />
+			{{!-- <img src="{{pictures[0]}}" /> --}}
 		</article>
 	{{/each}}
 </section>
