--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,30 +1,29 @@
-<!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="utf-8">
-    <title>My Site</title>
-    <link rel="stylesheet" href="/public/css/main.css">
-</head>
+	<head>
+		<meta charset="utf-8" />
+		<title>My Site</title>
+		<link rel="stylesheet" href="/public/css/main.css" />
+	</head>
 
-<body>
-    <!-- this navbar may need to be updated -->
-    <nav>
-        <a href="../../views/pages/homepage.handlebars">Main Page</a>
-        {{#if signedOut }}
-            <a href="../../views/pages/loginForm.handlebars">Login/SignUp</a>
-        {{/if}}
-        {{#if signedIn}}
-            <a href="../../views/pages/homepage.handlebars">Logout</a>
-        {{/if}}
-    </nav>
+	<body>
+		<!-- this navbar may need to be updated -->
+		<nav>
+			<a href="/">Main Page</a>
+			{{#if signedOut}}
+				<a href="/login">Login/SignUp</a>
+			{{/if}}
+			{{#if signedIn}}
+				<a href="/">Logout</a>
+			{{/if}}
+		</nav>
 
-    <main>
-        {{#if loggedOut}}
-            <p>You have successfully logged out!</p>
-        {{/if}}
-        {{{body}}}
-    </main>
-</body>
+		<main>
+			{{#if loggedOut}}
+				<p>You have successfully logged out!</p>
+			{{/if}}
+			{{{body}}}
+		</main>
+	</body>
 
 </html>
