homepage can now access account page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,6 +12,7 @@
 		<!-- this navbar may need to be updated -->
 		<nav>
 			<a href="/">Main Page</a>
+            <a href="/account/settings">My Account</a>
 			{{#if signedOut}}
 				<a href="/login">Login/SignUp</a>
 			{{/if}}
