connecting more pages

--- a/views/pages/myaccount.handlebars
+++ b/views/pages/myaccount.handlebars
@@ -3,7 +3,7 @@
 
     <!-- maybe make these into larger buttons present on the page --> 
 
-    <a href="./settings.handlebars">Click here to see your settings!</a>
+    <a href="/account/settings/get">Click here to see your settings!</a>
     <!-- 
         <a href="./quiz.handlebars">Click here to access our quiz!</a>  
         <a href="./dogs.handlebars">Click here to see the dogs you posted!</a>  
