--- a/views/pages/settings.handlebars
+++ b/views/pages/settings.handlebars
@@ -5,5 +5,5 @@
         <p>Email: {{{email}}}</p>
         <p>Age: {{{age}}}</p>
 
-    <a href="./updateSettings.handlebars">Any wrong information? Click here to update!</a>
+    <a href="/account/settings/edit">Any wrong information? Click here to update!</a>
 </section>
