updated routes & handlebars to get access to quiz and myDog links in account, started updating access to their application

--- a/views/pages/myaccount.handlebars
+++ b/views/pages/myaccount.handlebars
@@ -3,14 +3,9 @@
 
     <!-- maybe make these into larger buttons present on the page --> 
 
-    <a href="/account/settings/get">Click here to see your settings!</a>
-    <!-- 
-        <a href="./quiz.handlebars">Click here to access our quiz!</a>  
-        <a href="./dogs.handlebars">Click here to see the dogs you posted!</a>  
-            here, there will be a button to post a dog or click on specific dogs
-
-        <a href="./app.handlebars">Click here to access your application!</a>  
-            here, users will be able to see their current application or create an application
-    -->
+    <a href="/account/settings/get">Click here to see your settings!</a> <br>
+    <a href="/account/quiz">Click here to access our quiz!</a> <br>
+    <a href="/account/dogs">Click here to see the dogs you posted!</a> <br>
+    <a href="/account/application">Click here to access your application!</a>  
 
 </section>
