--- a/views/pages/updateSettings.handlebars
+++ b/views/pages/updateSettings.handlebars
@@ -1,11 +1,15 @@
 <section>
     <h2>Update Your Settings</h2>
     <p>Only enter information for what you want to update. Blank inputs will keep what you currently have in settings.</p>
-    <form id="settingsUpdate-form" method="POST">
+    <form id="settings-form" method="PATCH" action="/account/edit">
+        <div id="emptyError" class="error" hidden>
+            <p>At least setting must be changed to fill out this form</p>
+        </div>
+
         <label for="firstNameInput" id="first">First Name</label>
         <input id="firstNameInput" type="text" name = "firstNameInput"> <br>
         <div id="error1" class="error" hidden>
-            <p class="red">Error: Please enter a valid email! </p>
+            <p class="red">Error: Please enter a valid name! </p>
         </div>
 
         <label for="lastNameInput" id="last">Last Name</label>
