attempted to add route code for the settings form (doesn't work)

--- a/views/pages/updateSettings.handlebars
+++ b/views/pages/updateSettings.handlebars
@@ -1,7 +1,7 @@
 <section>
     <h2>Update Your Settings</h2>
     <p>Only enter information for what you want to update. Blank inputs will keep what you currently have in settings.</p>
-    <form id="settings-form" method="PATCH" action="/account/edit">
+    <form id="settings-form" method="PATCH" action="/account/settings/edit">
         <div id="emptyError" class="error" hidden>
             <p>At least setting must be changed to fill out this form</p>
         </div>
