updated client side js, user get function, and settings routes to update user information

--- a/views/pages/updateSettings.handlebars
+++ b/views/pages/updateSettings.handlebars
@@ -31,13 +31,13 @@
         </div>
 
         <label for="oldPasswordInput" id="oldPassword">Current Password</label>
-        <input id="oldPasswordInput" type="string" name = "oldPasswordInput"> <br>
+        <input id="oldPasswordInput" type="password" name = "oldPasswordInput"> <br>
         <div id="error5" class="error" hidden>
             <p class="red">Error: Missing / incorrect password </p>
         </div>
 
         <label for="newPasswordInput" id="newPassword">Updated Password</label>
-        <input id="newPasswordInput" type="string" name = "newPasswordInput"> <br>
+        <input id="newPasswordInput" type="password" name = "newPasswordInput"> <br>
         <div id="error6" class="error" hidden>
             <p class="red">Error: New Password doesn't meet the requirements</p>
         </div>
