--- a/views/pages/app.handlebars
+++ b/views/pages/app.handlebars
@@ -1,7 +1,6 @@
 <section>
     {{#if app}}
         <!-- write out all of the fields of the application-->
-        <!-- these may need to be adjusted --> 
         <h2>Your Application</h2>
         <p>Name: {{{first}}} {{{last}}}</p>
         <p>Age: {{{age}}}</p>
@@ -16,12 +15,12 @@
         <p>How would you describe your yard: {{{yard}}}</p>
         <p>Why do you want this dog: {{{reasoningExperience}}}</p>
 
-        <a href = "./updateApp.handlebars">Click here to update your application!</a>
+        <a href = "/account/application/edit">Click here to update your application!</a>
 
     {{/if}}
 
     {{#if noApp}}
             <p>You have not filled out an application!</p>
-            <a href = "./updateApp.handlebars">Click here to fill out an application!</a>
+            <a href = "/account/application/edit">Click here to fill out an application!</a>
     {{/if}}
 </section>
