--- a/views/pages/myDogs.handlebars
+++ b/views/pages/myDogs.handlebars
@@ -1,1 +1,10 @@
 <p> To do: show all of the dogs for that user and give them a space to make a post</p>
+<section>
+	<h1>My Dogs</h1>
+	{{#each dogs}}
+		<article class="dog">
+			<h2><a href="/dogs/{{_id}}">{{name}}</a></h2>
+			{{!-- <img src="{{pictures[0]}}" /> --}}
+		</article>
+	{{/each}}
+</section>
