--- a/views/pages/updateApp.handlebars
+++ b/views/pages/updateApp.handlebars
@@ -35,45 +35,45 @@
             <option value="false">No</option>
         </select> <br>
 
-        <label for="childrenAgesInput" type="checkbox" id="ages">If so, How old are your children?</label>
-        <fieldset id="childrenInput">
-            <input id="0" value="0" type="checkbox">
+        <label for="childrenAgesInput" id="ages">If so, how old are your children?</label>
+        <fieldset id="childrenAgesInput">
+            <input id="0" value="0" type="checkbox" name="childrenAgesInput">
             <label for="0">0</label> <br>
-            <input id="1" value ="1" type="checkbox">
+            <input id="1" value ="1" type="checkbox" name="childrenAgesInput">
             <label for="1">1</label> <br>
-            <input id="2" value="2" type="checkbox">
+            <input id="2" value="2" type="checkbox" name="childrenAgesInput">
             <label for="2">2</label> <br>
-            <input id="3" value ="3" type="checkbox">
+            <input id="3" value ="3" type="checkbox" name="childrenAgesInput">
             <label for="3">3</label> <br>
-            <input id="4" value="4" type="checkbox">
+            <input id="4" value="4" type="checkbox" name="childrenAgesInput">
             <label for="4">4</label> <br>
-            <input id="5" value ="5" type="checkbox">
+            <input id="5" value ="5" type="checkbox" name="childrenAgesInput">
             <label for="5">5</label> <br>
-            <input id="6" value="6" type="checkbox">
+            <input id="6" value="6" type="checkbox" name="childrenAgesInput">
             <label for="6">6</label> <br>
-            <input id="7" value ="7" type="checkbox">
+            <input id="7" value ="7" type="checkbox" name="childrenAgesInput">
             <label for="7">7</label> <br>
+            <input id="8" value ="8" type="checkbox" name="childrenAgesInput">
+            <label for="8">8</label> <br>
+            <input id="9" value="9" type="checkbox" name="childrenAgesInput">
+            <label for="9">9</label> <br>
+            <input id="10" value ="10" type="checkbox" name="childrenAgesInput">
+            <label for="10">10</label> <br>
+            <input id="11" value ="11" type="checkbox" name="childrenAgesInput">
+            <label for="11">11</label> <br>
+            <input id="12" value="12" type="checkbox" name="childrenAgesInput">
+            <label for="12">12</label> <br>
+            <input id="13" value ="13" type="checkbox" name="childrenAgesInput">
+            <label for="13">13</label> <br>
+            <input id="14" value="14" type="checkbox" name="childrenAgesInput">
+            <label for="14">14</label> <br>
+            <input id="15" value ="15" type="checkbox" name="childrenAgesInput">
+            <label for="15">15</label> <br>
+            <input id="16" value="16" type="checkbox" name="childrenAgesInput">
+            <label for="16">16</label> <br>
+            <input id="17" value ="17" type="checkbox" name="childrenAgesInput">
+            <label for="17">17</label> <br>
         </fieldset>
-        {{!-- <select id="childrenAgesInput" name="childrenAgesInput">
-            <option value="0">0</option>
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
-            <option value="10">10</option>
-            <option value="11">11</option>
-            <option value="12">12</option>
-            <option value="13">13</option>
-            <option value="14">14</option>
-            <option value="15">15</option>
-            <option value="16">16</option>
-            <option value="17">17</option>
-        </select> <br> --}}
 
         <label for="timeAloneInput" id="timeAlone">How much time would the dog spend alone per day in hours?</label>
         <input id="timeAloneInput" type="number" name = "timeAloneInput"> <br>   
@@ -82,21 +82,31 @@
         <select id="animalsInput" name="animalsInput">
             <option value="true">Yes</option>
             <option value="false">No</option>
-        </select> <br>If so, what other pets do you have?</label>
-        <select id="childrenAgesInput" type="checkbox" name="childrenAgesInput">
-            <option value="dog">Dog</option>
-            <option value="cat">Cat</option>
-            <option value="other">Other</option>
         </select> <br>
 
+        <label for="otherPetInput">If so, what other pets do you have?</label>
+        <fieldset id="otherPetInput">
+            <input id="dog" value="dog" type="checkbox" name="otherPetInput">
+            <label for="dog">dog</label> <br>
+            <input id="cat" value ="cat" type="checkbox" name="otherPetInput">
+            <label for="cat">cat</label> <br>
+            <input id="other" value="other" type="checkbox" name="otherPetInput">
+            <label for="other">other</label> <br>
+        </fieldset>
+
         <label for="yardInput" id="yard">How would you describe your backyard?</label>
-        <select id="yardInput" type="checkbox" name="yardInput">
-            <option value="enclosed front yard">Enclosed Front Yard</option>
-            <option value="enclosed back yard">Enclosed Back Yard</option>
-            <option value="garage">Garage</option>
-            <option value="dog house">Dog House</option>
-            <option value="other">other</option>
-        </select> <br>
+        <fieldset id="yardInput">
+            <input id="enclosed front yard" value="enclosed front yard" type="checkbox" name="yardInput">
+            <label for="enclosed front yard">Enclosed Front Yard</label> <br>
+            <input id="enclosed back yard" value ="enclosed back yard" type="checkbox" name="yardInput">
+            <label for="enclosed back yard">Enclosed Back Yard</label> <br>
+            <input id="garage" value="garage" type="checkbox" name="yardInput">
+            <label for="garage">Garage</label> <br>
+            <input id="dog house" value ="dog house" type="checkbox" name="yardInput">
+            <label for="dog house">Dog House</label> <br>
+            <input id="other" value="other" type="checkbox" name="yardInput">
+            <label for="other">Other</label> <br>
+        </fieldset>
 
         <label for="reasoningInput" id="reasoning">What other information would you like us to know about you?</label>
         <input id="reasoningInput" type="text" name = "reasoningInput"> <br>  
