--- a/views/pages/filter.handlebars
+++ b/views/pages/filter.handlebars
@@ -4,33 +4,43 @@
 	<div id="error" hidden>
 		<p>Double check for correct input!</p>
 	</div>
-	<form id="filter-form" method="post" action="/homepage">
-		<fieldset id="sex-input">
+	<form id="filter-form" method="post" action="/">
+		<fieldset id="sexinput">
 			<legend>Filter Sex</legend>
-			<input id="male" type="radio" name="sex-input" value="male" />
+			<input id="male" type="radio" name="sexinput" value="male" />
 			<label for="male" id="male">Male</label><br />
-			<input id="female" type="radio" name="sex-input" value="female" />
+			<input id="female" type="radio" name="sexinput" value="female" />
 			<label for="female" id="female">Female</label>
 		</fieldset>
 
-		<fieldset id="color-input">
+		<fieldset id="colorinput">
 			<legend>Filter Color</legend>
 			{{#if colors.length}}
 				{{#each colors}}
-					<input id={{this}} type="checkbox" name="color-input" />
-					<label for={{this}}>{{this}}</label><br />
+					<input
+						id="{{this}}"
+						type="checkbox"
+						name="colorinput"
+						value="{{this}}"
+					/>
+					<label for="{{this}}">{{this}}</label><br />
 				{{/each}}
 			{{else}}
 				<p>There are no colors to select from</p>
 			{{/if}}
 		</fieldset>
 
-		<fieldset id="breed-input">
+		<fieldset id="breedinput">
 			<legend>Filter Breed</legend>
 			{{#if breeds.length}}
 				{{#each breeds}}
-					<input id={{this}} type="checkbox" name="breed-input" />
-					<label for={{this}}>{{this}}</label><br />
+					<input
+						id="{{this}}"
+						type="checkbox"
+						name="breedinput"
+						value="{{this}}"
+					/>
+					<label for="{{this}}">{{this}}</label><br />
 				{{/each}}
 			{{else}}
 				<p>There are no breeds to select from</p>
