--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
 			<a href="/">Main Page</a>
             <a href="/account/settings">My Account</a>
 			{{#if signedIn}}
-				<a href="/">Logout</a>
+				<a href="/logout">Logout</a>
 			{{else}}
 				<a href="/login">Login/SignUp</a>
 			{{/if}}
