finished(?) the rest of the quiz handlebar

--- a/views/pages/quiz.handlebars
+++ b/views/pages/quiz.handlebars
@@ -6,7 +6,7 @@
 		<fieldset id="space">
 			<legend>What best describes your living situation?</legend>
 			<input id="apartment" type="radio" name="space" value="apartment" />
-			<label for="apartment" id="apartment">Apartment</label><br />
+			<label for="apartment" id="apartment">Apartment</label><br>
 
 			<input id="houseB" type="radio" name="space" value="houseB" />
 			<label for="houseB" id="houseB">House with a Backyard</label> <br>
@@ -18,7 +18,7 @@
         <fieldset id="walks">
 			<legend>How many walks could you give your dog a day?</legend>
 			<input id="none" type="radio" name="walks" value="none" />
-			<label for="none" id="none">I don't have time for walks!</label><br />
+			<label for="none" id="none">I don't have time for walks!</label><br>
 
 			<input id="short" type="radio" name="walks" value="short" />
 			<label for="short" id="short">I could go for one short walk a day</label> <br>
@@ -33,7 +33,7 @@
         <fieldset id="outside">
 			<legend>Do you like to spend time outside?</legend>
 			<input id="inside" type="radio" name="outside" value="inside" />
-			<label for="inside" id="inside">I would rather stay inside</label><br />
+			<label for="inside" id="inside">I would rather stay inside</label><br>
 
 			<input id="out" type="radio" name="outside" value="out" />
 			<label for="out" id="out">I love being outside</label> <br>
@@ -45,10 +45,10 @@
         <fieldset id="fur">
 			<legend>Does shedding bother you?</legend>
 			<input id="noshed" type="radio" name="fur" value="noshed" />
-			<label for="noshed" id="noshed">I can't handle all that fur!</label><br />
+			<label for="noshed" id="noshed">I can't handle all that fur!</label><br >
 
 			<input id="shed" type="radio" name="fur" value="shed" />
-			<label for="shed" id="shed">Bring on the fur!</label><br />
+			<label for="shed" id="shed">Bring on the fur!</label><br>
 
 			<input id="bothshed" type="radio" name="fur" value="bothshed" />
 			<label for="bothshed" id="bothshed">Either way, it doesn't bother me!</label> <br>
@@ -57,19 +57,68 @@
         <fieldset id="size">
 			<legend>What size dog is ideal for you?</legend>
 			<input id="mini" type="radio" name="size" value="mini" />
-			<label for="mini" id="mini">Very Small (less than 10 pounds)</label><br />
+			<label for="mini" id="mini">Very Small (less than 10 pounds)</label><br>
 
             <input id="small" type="radio" name="size" value="small" />
-			<label for="small" id="small">Small (10 to 20 pounds)</label><br />
+			<label for="small" id="small">Small (10 to 20 pounds)</label><br>
 
             <input id="medium" type="radio" name="size" value="medium" />
-			<label for="medium" id="medium">Medium (20 to 60 pounds)</label><br />
+			<label for="medium" id="medium">Medium (20 to 60 pounds)</label><br>
 
             <input id="large" type="radio" name="size" value="large" />
-			<label for="large" id="large">Large (60 to 100 pounds)</label><br />
+			<label for="large" id="large">Large (60 to 100 pounds)</label><br>
             
             <input id="xlarge" type="radio" name="size" value="xlarge" />
-			<label for="xlarge" id="xlarge">Very Large (more than 100 pounds)</label><br />
+			<label for="xlarge" id="xlarge">Very Large (more than 100 pounds)</label><br>
 		</fieldset>
+
+        <fieldset id="activity">
+			<legend>Which best describes how you would spend your free time?</legend>
+			<input id="lazy" type="radio" name="activity" value="lazy" />
+			<label for="lazy" id="lazy">I like to relax (I can sometimes be a couch potato)</label><br>
+
+            <input id="physical" type="radio" name="activity" value="physical" />
+			<label for="physical" id="physical">I like to be active, whether it be exercise or being busy</label><br>
+
+			<input id="activityboth" type="radio" name="activity" value="activityboth" />
+			<label for="activityboth" id="activityboth">It depends on my mood. I like to be busy but also take time to relax</label><br>
+		</fieldset>
+
+		<fieldset id="fam">
+			<legend>If you had a dog, who would it be spending time with the most?</legend>
+			<input id="me" type="radio" name="fam" value="me" />
+			<label for="me" id="me">Just me! I live in my own place!</label><br>
+
+			<input id="nokid" type="radio" name="fam" value="nokid" />
+			<label for="nokid" id="nokid">Me and my family, but everyone is grown up!</label><br>
+
+			<input id="kid" type="radio" name="fam" value="kid" />
+			<label for="kid" id="kid">Me and my family, including kids!</label><br>
+		</fieldset>
+
+        <fieldset id="dog">
+            <legend>What main traits would you want most in a dog?</legend>
+            <input id="working" type="radio" name="dog" value="working" />
+			<label for="working" id="working">Intelligent and Loyal</label><br>
+
+            <input id="herding" type="radio" name="dog" value="herding" />
+			<label for="herding" id="herding">Smart and Energetic</label><br>
+
+            <input id="hound" type="radio" name="dog" value="hound" />
+			<label for="hound" id="hound">Affectionate and Strong-Willed</label><br>
+
+            <input id="sporting" type="radio" name="dog" value="sporting" />
+			<label for="sporting" id="sporting">High Energy and Active</label><br>
+
+            <input id="nonsporting" type="radio" name="dog" value="nonsporting" />
+			<label for="nonsporting" id="nonsporting">Versatile and Loving</label><br>
+
+            <input id="toy" type="radio" name="dog" value="toy" />
+			<label for="toy" id="toy">Smart and Affectionate</label><br>
+
+            <input id="terrier" type="radio" name="dog" value="terrier" />
+			<label for="terrier" id="terrier">Observant and Affectionate</label><br>
+        </field>
+
     </form>
 </section>
