--- a/views/pages/app.handlebars
+++ b/views/pages/app.handlebars
@@ -7,12 +7,10 @@
         <p>Email: {{{email}}}</p>
         <p>Phone: {{{phone}}}</p>
         <p>Living Acconomodations: {{{livingAccomodations}}}</p>
-        <p>Children: {{{children}}}</p>
-        <p>Ages of Children: {{{childrenAges}}}</p>
+        <p>How many children you have: {{{children}}}</p>
         <p>Time you would be away from your dog: {{{timeAlone}}}</p>
-        <p>Do you have any pets: {{{animals}}}</p>
-        <p>If applicable, what pets do you already have: {{{typeAnimals}}}</p>
-        <p>How would you describe your yard: {{{yard}}}</p>
+        <p>How many pets you already have: {{{animals}}}</p>
+        <p>Do you have a fenced in backward: {{{yard}}}</p>
         <p>Why do you want this dog: {{{reasoningExperience}}}</p>
 
         <a href = "/account/application/edit">Click here to update your application!</a>
