fixed all app bugs except for the animals input

--- a/views/pages/app.handlebars
+++ b/views/pages/app.handlebars
@@ -6,9 +6,9 @@
         <p>Age: {{{age}}}</p>
         <p>Email: {{{email}}}</p>
         <p>Phone: {{{phone}}}</p>
-        <p>Living Acconomodations: {{{livingAccomodations}}}</p>
+        <p>Living Acconomodations: {{{livingAccommodations}}}</p>
         <p>How many children you have: {{{children}}}</p>
-        <p>Time you would be away from your dog: {{{timeAlone}}}</p>
+        <p>Time you would be away from your dog (in hours): {{{timeAlone}}}</p>
         <p>How many pets you already have: {{{animals}}}</p>
         <p>Do you have a fenced in backward: {{{yard}}}</p>
         <p>Why do you want this dog: {{{reasoningExperience}}}</p>
