--- a/views/pages/updateApp.handlebars
+++ b/views/pages/updateApp.handlebars
@@ -35,7 +35,7 @@
             <option value="1">One</option>
             <option value="2">Two</option>
             <option value="3">Three</option>
-            <option value="4">More than 3</option>
+            <option value="more than 3">More than 3</option>
         </select>
 {{!-- 
         <label for="childrenInput" id="children">Do you have any children?</label>
@@ -89,12 +89,11 @@
 
         <label for="animalsInput" id="animals">How many pets do you already own?</label>
         <select id="animalsInput" name="animalsInput">
-
             <option value="0">None</option>
             <option value="1">One</option>
             <option value="2">Two</option>
             <option value="3">Three</option>
-            <option value="4">More than 3</option>
+            <option value="more than 3">More than 3</option>
         </select>
         {{!-- <label for="animalsInput" id="animals">Do you have any other pets?</label>
         <select id="animalsInput" name="animalsInput">
@@ -115,8 +114,8 @@
         <label for="yardInput" id="yard">Do you have a fenced in yard?</label>
         <select id="yardInput" name="yardInput">
 
-            <option value="true">Yes</option>
-            <option value="false">No</option>
+            <option value="yes">Yes</option>
+            <option value="no">No</option>
         </select>
         {{!-- <fieldset id="yardInput">
             <input id="enclosed front yard" value="enclosed front yard" type="checkbox" name="yardInput">
