fixed the bug in the application

--- a/views/pages/app.handlebars
+++ b/views/pages/app.handlebars
@@ -6,7 +6,7 @@
         <p>Age: {{{age}}}</p>
         <p>Email: {{{email}}}</p>
         <p>Phone: {{{phone}}}</p>
-        <p>Living Acconomodations: {{{livingAccommodations}}}</p>
+        <p>Living Accommodations: {{{livingAccommodations}}}</p>
         <p>How many children you have: {{{children}}}</p>
         <p>Time you would be away from your dog (in hours): {{{timeAlone}}}</p>
         <p>How many pets you already have: {{{animals}}}</p>
