started client side for quiz

--- a/views/pages/quiz.handlebars
+++ b/views/pages/quiz.handlebars
@@ -120,5 +120,7 @@
 			<label for="terrier" id="terrier">Observant and Affectionate</label><br>
         </field>
 
+		<button id="quizButton" type="submit">Submit</button>
+
     </form>
 </section>
