updated client side for the quiz - going to look at bug later

--- a/views/pages/quiz.handlebars
+++ b/views/pages/quiz.handlebars
@@ -2,6 +2,10 @@
     <h2>Quiz!</h2>
     <h3>See what dog breeds are best for you!</h3>
 
+    <div id="error" hidden>
+        <p>Please make sure all questions are completed!</p>
+    </div>
+
     <form id="quiz-form" method="post">
 		<fieldset id="space">
 			<legend>What best describes your living situation?</legend>
